[gd_scene load_steps=8 format=3 uid="uid://cjqsyxv4en7iv"]

[ext_resource type="FontFile" uid="uid://cp5kpkkmrmdob" path="res://assets/fonts/monogram.ttf" id="1_atyrv"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_xh08o"]
[ext_resource type="Texture2D" uid="uid://c265s82scq482" path="res://assets/sprites/background.png" id="2_lti16"]
[ext_resource type="FontFile" uid="uid://d4jqcnkqbiw78" path="res://assets/fonts/monogram-extended.ttf" id="3_bnm38"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ijnfu"]
texture = ExtResource("2_lti16")
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
modulate_color = Color(0.7387, 0.741222, 0.89, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rxix6"]
bg_color = Color(0.1513, 0.17, 0.165325, 0.823529)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.51805, 0.5135, 0.65, 0.333333)
shadow_size = 7
shadow_offset = Vector2(0, 0.235)

[sub_resource type="GDScript" id="GDScript_hqfy2"]
script/source = "extends Node

func game_load_host():
	get_tree().change_scene_to_file(\"res://scenes/game.tscn\")
	MultiplayerManager.host()
"

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xh08o")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ijnfu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_atyrv")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rxix6")
text = "Play Game"

[node name="Join" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_atyrv")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rxix6")
text = "Join Game
"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_atyrv")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rxix6")
text = "Tutorial"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_atyrv")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rxix6")
text = "Exit"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_hqfy2")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -347.5
offset_top = -263.0
offset_right = 347.5
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.241156, 0.241156, 0.241156, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("3_bnm38")
theme_override_font_sizes/font_size = 196
text = "Bolt Away"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
